perf: address http-streams memory leaks from unclosed extractions

--- a/.env.example
+++ b/.env.example
@@ -315,3 +315,36 @@ ADMIN_TOKEN=
 
 # Host binding (default: 0.0.0.0)
 HOST=0.0.0.0
+
+# --- MEMORY OPTIMIZATION SETTINGS ---
+# Configure memory limits and batch sizes to prevent out-of-memory errors
+# These settings are especially important when processing large batches of episodes
+
+# HubCloud link processing limits
+# Maximum number of download buttons to process per page (default: 15)
+MAX_HUBCLOUD_BUTTONS=15
+
+# Maximum number of links to validate for 206 support (default: 10)
+MAX_HUBCLOUD_VALIDATIONS=10
+
+# 4KHDHub stream processing limits
+# Maximum number of working links to collect (default: 15)
+MAX_4KHDHUB_LINKS=15
+
+# Maximum number of links to process before stopping (default: 30)
+MAX_4KHDHUB_PROCESS=30
+
+# Batch size for parallel link extraction (default: 4)
+# Lower values use less memory but may be slower
+BATCH_SIZE=4
+
+# Preview mode settings
+# Maximum number of preview links in lazy-load mode (default: 25)
+MAX_4KHDHUB_PREVIEW_LINKS=25
+
+# Validation settings
+# Disable URL validation to save memory (default: false)
+DISABLE_4KHDHUB_URL_VALIDATION=false
+
+# Disable seek validation (206 support check) to save memory (default: false)
+DISABLE_4KHDHUB_SEEK_VALIDATION=false
