--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
 	"description": "Stremio Addon to search downloads and torrents in debrid services",
 	"main": "server.js",
 	"scripts": {
-		"start": "LOG_LEVEL=error node cluster.js",
-		"start:dev": "LOG_LEVEL=debug node cluster.js",
-		"standalone": "LOG_LEVEL=error node server.js",
-		"standalone:dev": "LOG_LEVEL=debug node server.js",
-		"dev": "LOG_LEVEL=debug nodemon server.js"
+		"start": "LOG_LEVEL=error node --max-old-space-size=2048 --expose-gc cluster.js",
+		"start:dev": "LOG_LEVEL=debug node --max-old-space-size=2048 --expose-gc cluster.js",
+		"standalone": "LOG_LEVEL=error node --max-old-space-size=2048 --expose-gc server.js",
+		"standalone:dev": "LOG_LEVEL=debug node --max-old-space-size=2048 --expose-gc server.js",
+		"dev": "LOG_LEVEL=debug node --max-old-space-size=2048 --expose-gc node_modules/.bin/nodemon server.js",
+		"test": "node --max-old-space-size=2048 --expose-gc node_modules/.bin/jest"
 	},
 	"author": "Sooti",
 	"license": "MIT",
