scrapers: add ext.to for better results

--- a/.env.example
+++ b/.env.example
@@ -106,6 +106,18 @@ KNABEN_ENABLED=true
 KNABEN_URL="https://api.knaben.org"
 KNABEN_LIMIT=300
 
+## ExtTo (Torrent search engine - requires FlareSolverr for Cloudflare bypass)
+## Enabled by default, but requires FLARESOLVERR_URL to be set
+EXTTO_ENABLED=true
+EXTTO_URL="https://ext.to"
+EXTTO_LIMIT=100
+EXTTO_MAX_PAGES=2
+EXTTO_TIMEOUT=65000
+
+## FlareSolverr (Cloudflare bypass service - required for ExtTo, optional for other scrapers)
+## See: https://github.com/FlareSolverr/FlareSolverr
+FLARESOLVERR_URL=
+
 ## Global Scraper Settings
 SCRAPER_TIMEOUT=5000
 
