scrapers: add back torrentdownload.info

--- a/.env.example
+++ b/.env.example
@@ -114,6 +114,14 @@ EXTTO_LIMIT=200
 EXTTO_MAX_PAGES=2
 EXTTO_TIMEOUT=65000
 
+## TorrentDownload (Torrent search engine)
+## Enabled by default
+TORRENTDOWNLOAD_ENABLED=true
+TORRENTDOWNLOAD_URL="https://torrentdownload.info"
+TORRENTDOWNLOAD_LIMIT=100
+TORRENTDOWNLOAD_MAX_PAGES=2
+TORRENTDOWNLOAD_TIMEOUT=10000
+
 ## FlareSolverr (Cloudflare bypass service - required for ExtTo, optional for other scrapers)
 ## See: https://github.com/FlareSolverr/FlareSolverr
 FLARESOLVERR_URL=
