scrapers: add ilcorsaronero to scrapers

--- a/.env.example
+++ b/.env.example
@@ -122,6 +122,13 @@ TORRENTDOWNLOAD_LIMIT=100
 TORRENTDOWNLOAD_MAX_PAGES=2
 TORRENTDOWNLOAD_TIMEOUT=10000
 
+## IlCorsaroNero (Italian torrent site)
+ILCORSARONERO_ENABLED=false
+ILCORSARONERO_URL="https://ilcorsaronero.link"
+ILCORSARONERO_LIMIT=25
+ILCORSARONERO_TIMEOUT=15000
+ILCORSARONERO_DETAIL_CONCURRENCY=5
+
 ## FlareSolverr (Cloudflare bypass service - required for ExtTo, optional for other scrapers)
 ## See: https://github.com/FlareSolverr/FlareSolverr
 FLARESOLVERR_URL=
