scrapers: add support for proxy per scraper

--- a/.env.example
+++ b/.env.example
@@ -220,19 +220,21 @@ DEBRID_HTTP_PROXY=
 
 # Per-service proxy configuration (optional, overrides default proxy for specific services)
 # Format: "service1:proxy_url,service2:proxy_url"
-# Available services: realdebrid, alldebrid, torbox, premiumize, offcloud, debriderapp, usenet, homemedia, httpstreaming
+# Available services: realdebrid, alldebrid, torbox, premiumize, offcloud, debriderapp, usenet, homemedia, httpstreams, scrapers, and individual scrapers (e.g., thepiratebay, torrentgalaxy, jackett)
 # Examples:
 #   DEBRID_PER_SERVICE_PROXIES=realdebrid:socks5://user:pass@proxy:1080,torbox:socks5://proxy2:1080
 #   DEBRID_PER_SERVICE_PROXIES=realdebrid:socks5h://warp:1080,alldebrid:socks5://proxy:1080
+#   DEBRID_PER_SERVICE_PROXIES=thepiratebay:socks5h://warp:1080                        # Target a single scraper
 # Note: Services not listed will use the default proxy (if configured) or no proxy
 DEBRID_PER_SERVICE_PROXIES=
 
 # Services to use the default proxy (comma-separated) - only used if no per-service proxy is configured
-# Available: realdebrid, alldebrid, torbox, premiumize, offcloud, debrider, scrapers, httpstreams
+# Available: realdebrid, alldebrid, torbox, premiumize, offcloud, debrider, scrapers, httpstreams, and individual scrapers (e.g., thepiratebay)
 # Examples:
 #   DEBRID_PROXY_SERVICES=*:true                              (proxy everything with default proxy)
 #   DEBRID_PROXY_SERVICES=realdebrid:true,alldebrid:true      (only debrid services with default proxy)
 #   DEBRID_PROXY_SERVICES=scrapers:true,httpstreams:true      (only scrapers and streaming with default proxy)
+#   DEBRID_PROXY_SERVICES=thepiratebay:true                   (only this scraper uses the default proxy)
 DEBRID_PROXY_SERVICES=*:false
 
 # --- CLUSTERING & PERFORMANCE ---
