--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "Sootio",
-	"version": "1.7.8-5",
+	"version": "1.7.9",
 	"description": "Stremio Addon to search downloads and torrents in debrid services",
 	"main": "server.js",
 	"scripts": {
