perf: support postgres DB

--- a/.env.example
+++ b/.env.example
@@ -282,6 +282,22 @@ MONGO_CACHE_TTL_DAYS=180
 # Force cleanup of duplicate entries on startup (performance impact)
 MONGO_FORCE_CLEANUP=false
 
+# --- CACHE BACKEND ---
+# Cache backend: sqlite (default) or postgres
+CACHE_BACKEND=sqlite
+
+# --- POSTGRES CACHE ---
+# Optional shared cache for multi-instance deployments
+# Use either POSTGRES_URL/DATABASE_URL or the discrete settings below
+POSTGRES_URL=
+DATABASE_URL=
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=sootio
+POSTGRES_USER=sootio
+POSTGRES_PASSWORD=sootio
+POSTGRES_SSL=false
+
 # --- SQLITE CACHE ---
 # Optional persistent cache for magnet availability using SQLite
 # Alternative to MongoDB - more lightweight and file-based
