perf: add support for per-service early return

--- a/.env.example
+++ b/.env.example
@@ -347,6 +347,20 @@ PTT_CACHE_LIMIT=10000
 CACHE_MAX_AGE=60
 DISABLE_CACHE=false
 
+# --- EARLY RETURN SETTINGS ---
+# Early return is disabled by default; set DISABLE_EARLY_RETURN=false to enable.
+DISABLE_EARLY_RETURN=true
+EARLY_RETURN_TIMEOUT_MS=2500
+EARLY_RETURN_MIN_STREAMS=1
+
+# Per-service early return overrides
+# Provider keys are uppercased with non-alphanumeric characters replaced by underscores.
+# Examples: RealDebrid -> REALDEBRID, DebriderApp -> DEBRIDERAPP, httpstreaming -> HTTPSTREAMING
+# EARLY_RETURN_DISABLE_EASYNEWS=true
+# EARLY_RETURN_TIMEOUT_MS_EASYNEWS=6000
+# EARLY_RETURN_DISABLE_DEBRIDERAPP=true
+# EARLY_RETURN_TIMEOUT_MS_REALDEBRID=2500
+
 # --- ADVANCED SETTINGS ---
 # Additional configuration options for fine-tuning
 
