--- a/.env.example
+++ b/.env.example
@@ -156,6 +156,7 @@ DISABLE_URL_VALIDATION=false
 DISABLE_SEEK_VALIDATION=false
 HTTP_TIMEOUT=5000
 HTTP_RESOLVE_TIMEOUT=10000
+DOMAIN_CACHE_TTL_MS=900000
 
 # --- QUALITY & FILTERING SETTINGS ---
 # Control which torrents are prioritized and filtered
