--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,15 +18,10 @@ services:
     environment:
       - NODE_ENV=production
       - LOG_LEVEL=error
-    command: ["node", "--max-old-space-size=384", "--expose-gc", "server.js"]
+    command: ["npm", "run", "standalone"]
 
     restart: always
-    deploy:
-      resources:
-        limits:
-          memory: 512M    # hard cap; container OOMs if exceeded
-        reservations:
-          memory: 256M    # soft reservation
+
 volumes:
   sootio-data:  # Named volume for persistent data
 
