http-streams: fix and optimize mkvdrama for better support

--- a/.env.example
+++ b/.env.example
@@ -138,6 +138,11 @@ ILCORSARONERO_DETAIL_CONCURRENCY=5
 ## FlareSolverr (Cloudflare bypass service - required for ExtTo, optional for other scrapers)
 ## See: https://github.com/FlareSolverr/FlareSolverr
 FLARESOLVERR_URL=
+HUBCLOUD_FILENAME_EXTRACT_ENABLED=false
+DRIVESEED_TOKEN_POLL_ATTEMPTS=5
+DRIVESEED_TOKEN_POLL_DELAY_MS=3000
+UHDMOVIES_ZFILE_POLL_ATTEMPTS=15
+UHDMOVIES_ZFILE_POLL_DELAY_MS=5000
 
 ## FlareSolverr Rate Limiting (protects against CPU overload)
 ## Max concurrent FlareSolverr requests (default: 2)
@@ -389,6 +394,7 @@ EARLY_RETURN_MIN_STREAMS=1
 REQUEST_TIMEOUT=30000
 REQUEST_MAX_RETRIES=3
 REQUEST_RETRY_DELAY=1000
+HUBCLOUD_USER_AGENT=Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:140.0) Gecko/20100101 Firefox/140.0
 
 # Admin token for protected endpoints (optional)
 ADMIN_TOKEN=
