scrapers: fix all broken scrapers and fix unselecting scrapers from setting config

--- a/.env.example
+++ b/.env.example
@@ -84,15 +84,19 @@ BTDIG_LIMIT=50
 BTDIG_MAX_PAGES=5
 # Enable free rotating proxies to reduce blocking
 BTDIG_USE_PROXIES=false
+# Optional: force a specific proxy for BTDig (overrides BTDIG_USE_PROXIES)
+# Examples: socks5://host:1080, socks5h://host:1080, http://user:pass@host:8080
+BTDIG_PROXY_URL=""
 
 ## MagnetDL (Direct HTML scraping)
 MAGNETDL_ENABLED=true
 MAGNETDL_URL="https://magnetdl.homes"
 MAGNETDL_LIMIT=200
+MAGNETDL_PROXY=""  # SOCKS5/HTTP proxy for bypassing Cloudflare (e.g. socks5://host:port)
 
 ## TorrentGalaxy (Torrent aggregator)
 TORRENT_GALAXY_ENABLED=false
-TORRENT_GALAXY_URL="https://torrentgalaxy.one"
+TORRENT_GALAXY_URL="https://torrentgalaxy.space"
 
 ## Torrent9 (French torrent site)
 TORRENT9_ENABLED=false
