--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"standalone": "LOG_LEVEL=error node --max-old-space-size=4096 --expose-gc server.js",
 		"standalone:dev": "LOG_LEVEL=debug node --max-old-space-size=2048 --expose-gc server.js",
 		"dev": "LOG_LEVEL=debug NODE_OPTIONS=\"--max-old-space-size=2048 --expose-gc\" nodemon server.js",
-		"test": "node --max-old-space-size=2048 --expose-gc node_modules/.bin/jest"
+		"test": "node --max-old-space-size=2048 --expose-gc node_modules/.bin/jest",
+		"test:e2e:mkvdrama": "node tests/mkvdrama-e2e-benchmark.js",
+		"bench:mkvdrama": "node scripts/benchmark-mkvdrama-e2e.js"
 	},
 	"author": "Sooti",
 	"license": "MIT",
